# SignalR-Client-Cpp

./: .gitignore  CMakeLists.txt  build.RPi.sh  build.android.sh  build.sh  build.ubuntu.sh
cmake/: cpprest_find_boost.cmake  cpprest_find_openssl.cmake
include/signalrclient/: signalr_client_config.h
samples/HubConnectionSample/: CMakeLists.txt
src/signalrclient/: CMakeLists.txt  signalr_client_config.cpp
